syntax = "proto3";
package topk.data.v1;

message Value {
  oneof value {
    // Boolean
    bool bool = 1;
    // Unsigned integer
    uint32 u32 = 4;
    uint64 u64 = 5;
    // Signed integer
    int32 i32 = 8;
    int64 i64 = 9;
    // Floats
    float f32 = 10;
    double f64 = 11;
    // String
    string string = 12;
    // Binary
    bytes binary = 13;
    // Vector
    Vector vector = 14;
    // Null
    Null null = 15;
    // Sparse vector
    SparseVector sparse_vector = 16;
  }
}

message Vector {
  // Float vector
  message Float {
    repeated float values = 1;
  }

  // Byte vector
  message Byte {
    bytes values = 1;
  }

  oneof vector {
    Float float = 1;
    Byte byte = 2;
  }
}

message SparseVector {
  // Float32 sparse vector values
  message F32Values {
    repeated float values = 1;
  }

  // U8 sparse vector values
  message U8Values {
    bytes values = 1;
  }

  // Sorted list of value indices
  repeated uint32 indices = 1;
  // Vector values
  oneof values {
    F32Values f32 = 2;
    U8Values u8 = 3;
  }
}

message Null {}
